# sensorbox-sdk

./: .gitignore  LICENSE  README.md  benchmark.py  benchmark_baseline.json  pyproject.toml  pytest.ini  run_dashboard.sh  run_dual_csi_lidar.sh  test_pointcloud.ply  test_room_measurement.py
.github/workflows/: ci.yml
examples/: camera_capture.py  capture_dual_csi_lidar.py  csi_capture.py  multi_sensor_capture.py  playback_session.py  record_csi_lidar.py  record_csi_oakd.py  record_oakd.py  record_session.py  rplidar_capture.py
sensorbox/: __init__.py
sensorbox/cli/: __init__.py  main.py
sensorbox/core/: __init__.py  config.py  frame.py  pointcloud.py  sensor.py
sensorbox/dashboard/: __init__.py  app.py  dual_csi_lidar.py  live.py  room_measurement.py
sensorbox/drivers/: __init__.py  camera.py  csi_camera.py  multi_camera.py  oakd.py  rplidar.py  sensor_fusion.py
sensorbox/live/: __init__.py  stream.py
sensorbox/measurement/: __init__.py  plane_detector.py  room.py  wall_detector.py
sensorbox/storage/: __init__.py  hdf5_reader.py  hdf5_writer.py  oakd_reader.py  oakd_writer.py
sensorbox/sync/: __init__.py  alignment.py  synced_fusion.py  timestamp.py
tests/: __init__.py  test_core.py  test_csi_camera.py  test_rplidar.py  test_sensor_fusion.py
