[project]
name = "sensorbox-sdk"
version = "0.1.0"
description = "SDK for ingesting data from Arducams and RPLIDAR sensors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "rplidar-roboticia>=0.9.5",
    "h5py>=3.9.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
dashboard = [
    "streamlit>=1.28.0",
]

[project.scripts]
sensorbox = "sensorbox.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
